commit 8d662f73f501eda9744ece030e347fe60a328701
Date:   Sun Jun 21 23:45:59 2015 +0300

    Recompiled the DLLS with VS2010 based on libzmq-v100-mt-4_0_4

commit 79d9b03329ad2f555f155cb31c1141ca8afe6255
Date:   Sun Jun 21 16:31:40 2015 +0300

    replaced MQL4/Libraries/OTMql4/libzmq.dll with libzmq-v100-mt-4_0_4.dll  from http://miru.hk/archive/ZeroMQ-4.0.4~miru1.0-x86.exe

commit 88452eec6b15713d1c88b63fd22808823996fdcf
Date:   Fri Jun 19 18:00:02 2015 +0300

    Moved the doc into the wiki.

commit 2bb0b5c861aef0aced5478071285ae912961286d
Date:   Thu Jun 18 23:01:08 2015 +0300

    Added a warning message that MQL4/Experts/OTMql4/OTZmqCmdEA.mq4 is broken.

commit a351fae648d518d7331e8979bf9f764fdc0e0af5
Date:   Thu Jun 18 22:05:49 2015 +0300

    Moved the documentation over to the wiki in Creole format.
    Add wiki/CompiledDllOTMql4Zmq.creole to document the problems with the DLL version.

commit 487556d76f259e4c4ad1b6671b4d6ec05fcee4c0
Date:   Wed Jun 3 09:55:28 2015 +0300

    Minor extensions to OTZmqProcessCmd.mq4.

commit b9404cc6e6aba334f7b96a6f636817475f159137
Date:   Mon May 18 15:42:37 2015 +0300

    Refactored the MQL code into MQL4/Libraries/OTMql4/OTPyChart.mq4
    and started using JSON to communicate to the client.

commit d8ee22d15f318f08d43f560f193f525f397b980e
Date:   Fri May 15 11:29:11 2015 +0300

    Refactoring to pull common code from OTMql4AMQP and OTMql4Zmq into OTMql4Py.

commit 89a2f5de549cecfaeba3e4352f00502bac6d78d0
Date:   Fri May 8 19:11:23 2015 +0300

    Sending and receiving with PyZmq both now work.

commit 81fff96b785fd33b9a026323b10f4d346e9a0aa0
Date:   Fri May 8 16:41:34 2015 +0300

    Refactored the PyZmq to be more like OTMql4ZMQP.
    It's working fine for Mt4 sending tick, bar and timer events.
    Added a script bin/OTZmqPublish.py to test publishing messages
    back to PyZmq Mt4 - not working yet.

commit 03a50d15fad1d8d6c28bcbdc508c2668f663fc69
Date:   Thu May 7 00:53:42 2015 +0300
